--- a/frontend/forum-app/package.json
+++ b/frontend/forum-app/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.1.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vue": "^3.0.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "wave-ui": "^2.23.0"
