--- a/frontend/forum-app/package.json
+++ b/frontend/forum-app/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.0.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^4.0.0-0",
+    "@vue/cli": "^4.5.13",
     "vuex": "^4.0.0-0",
     "wave-ui": "^2.23.0"
   },
